add documentation for Admin Dashboard and Kelola Kelas (GET)
